--- a/main.tex
+++ b/main.tex
@@ -306,7 +306,7 @@ The \textbf{learning rate}, $\eta$, determines the scaling for the size of each 
 \begin{figure}[h]
     \centering
     \includegraphics[width=\linewidth]{figs/gradient_descent.png}
-    \caption{Visualization of naive gradient descent on an error surface with two parameters ($L = \theta_1^2 + \theta_2^2 - \theta_1\theta_2 - \theta_1$) by a 3D plot (left), and a contour plot (right). The red line shows $100$ iterations of gradient descent, starting from intial parameters $\boldsymbol{\theta}^{(0)} = [-4,4]$, with $\eta = 0.1$. (Original)}
+    \caption{Visualization of naive gradient descent on the Himmelblau function \cite{jamil_literature_2013} by a 3D plot (left), and a contour plot (right). The red line shows $100$ iterations of gradient descent, starting from intial parameters $\boldsymbol{\theta}^{(0)} = [1,7]$, with $\eta = 0.001$. (Original)}
     \label{fig:enter-label}
 \end{figure}
 
@@ -878,11 +878,6 @@ Using deep reinforcement learning, Marco Hutter et al.\ trained the ANYmal to wa
     \end{align*}
 \end{proof}
 \end{appendices}
-
-
-
-
-
 
 
 \nocite{*} % remove after finishing citation refs
